--- a/style.css
+++ b/style.css
@@ -1,4 +1,15 @@
 body {
-    background: rgb(194, 194, 194);
+    background: rgb(231, 231, 231);
     text-align: center
+    font-family: 'Roboto', sans-serif;
+}
+
+.intro span {
+    font-size: 22px;
+    line-height: 40px;
+}
+
+.intro span.highlight {
+    background-color: #333;
+    color: white;
 }
