--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     background: rgb(231, 231, 231);
-    text-align: center
+    text-align: center;
     font-family: 'Roboto', sans-serif;
 }
 
