--- a/style.css
+++ b/style.css
@@ -2,14 +2,15 @@ body {
     background: rgb(231, 231, 231);
     text-align: center;
     font-family: 'Roboto', sans-serif;
+    font-size: 22px;
 }
 
-.intro span {
+span {
     font-size: 22px;
     line-height: 40px;
 }
 
-.intro span.highlight {
+span.highlight {
     background-color: #333;
     color: white;
 }
