--- a/style.css
+++ b/style.css
@@ -2,15 +2,19 @@ body {
     background: rgb(231, 231, 231);
     text-align: center;
     font-family: 'Roboto', sans-serif;
-    font-size: 22px;
+    font-size: 25px;
 }
 
 span {
-    font-size: 30px;
+    font-size: 25px;
     line-height: 40px;
 }
 
 span.highlight {
     background-color: #333;
     color: white;
+}
+
+table {
+    text-align: center;
 }
