--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body {
+    margin-top: 15px;
     background: rgb(231, 231, 231);
     text-align: center;
     font-family: 'Roboto', sans-serif;
@@ -7,7 +8,7 @@ body {
 
 span {
     font-size: 25px;
-    line-height: 40px;
+    line-height: 30px;
 }
 
 span.highlight {
@@ -16,5 +17,6 @@ span.highlight {
 }
 
 table {
-    text-align: center;
+    float: center;
+
 }
