--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    margin-top: 15px;
+    padding-top: 15px;
     background: rgb(231, 231, 231);
     text-align: center;
     font-family: 'Roboto', sans-serif;
@@ -14,6 +14,10 @@ span {
 span.highlight {
     background-color: #333;
     color: white;
+}
+
+.link {
+    text-decoration: none;
 }
 
 table {
