--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    margin-top: 40px;
+    /* margin-top: 40px; */
     background: rgb(231, 231, 231);
     text-align: center;
     font-family: 'Roboto', sans-serif;
