--- a/style_lng.css
+++ b/style_lng.css
@@ -1,10 +1,17 @@
-body {
-    width: 500 px;
+body.ru {
     margin-top: 50px;
     background: rgb(231, 231, 231);
     text-align: center;
     font-family: 'Roboto', sans-serif;
     font-size: 25px;
+}
+
+.container {
+    max-width: 700px;
+    margin-left: auto;
+    margin-right: auto;
+    background: black;
+    margin: auto;
 }
 
 span {
