--- a/style_lng.css
+++ b/style_lng.css
@@ -1,6 +1,6 @@
 body.ru {
     margin-top: 50px;
-    text-align: center;
+    text-align: left;
     font-family: 'Roboto', sans-serif;
     font-size: 15px;
 }
