--- a/style_lng.css
+++ b/style_lng.css
@@ -28,10 +28,10 @@ span.highlight {
     margin: auto
 } */
 
-td {
-    text-decoration: none;
+#t01 {
+
 }
 
-td .href {
-    text-decoration: none
+#t02 {
+    
 }
