--- a/style_lng.css
+++ b/style_lng.css
@@ -29,8 +29,10 @@ span.highlight {
 } */
 
 #t01 {
+    width: 700px;
+    line-height: 25px;
 }
 
 #t02 li {
-    padding-left: 5px;
+    width: 700px;
 }
