--- a/style_lng.css
+++ b/style_lng.css
@@ -29,6 +29,10 @@ span.highlight {
     font-size: 18px;    
 }
 
+.text {
+    text-align: justify;
+}
+
 /* table {
     width: 50px;
     margin: auto
