--- a/style_lng.css
+++ b/style_lng.css
@@ -1,7 +1,7 @@
 body.ru {
     margin-top: 50px;
     text-align: left;
-    font-family: 'Oswald', sans-serif;
+    font-family: 'Open Sans', sans-serif;
     font-size: 15px;
 }
 
@@ -14,7 +14,7 @@ body.ru {
 
 span {
     font-size: 25px;
-    font-family: 'Oswald', sans-serif;
+    font-family: 'Open Sans', sans-serif;
 }
 
 span.highlight {
@@ -40,13 +40,13 @@ span.highlight {
 #t01 tbody {
     line-height: 13px;
     text-decoration: none;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Open Sans', sans-serif;
     font-size: 15px;
 }
 
 #t02 tbody {
     line-height: 30px;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Open Sans', sans-serif;
     font-size: 15px;
 }
 
