--- a/style_lng.css
+++ b/style_lng.css
@@ -33,8 +33,8 @@ span.highlight {
     text-align: justify;
 }
 
-.link {
-	text-decoration: none;
+.indent {
+    text-indent: 8px;
 }
 
 #t01 tbody {
