--- a/style_lng.css
+++ b/style_lng.css
@@ -33,9 +33,9 @@ span.highlight {
     text-align: justify;
 }
 
-.indent {
+/* .indent {
     text-indent: 8px;
-}
+} */
 
 #t01 tbody {
     line-height: 13px;
