--- a/style_lng.css
+++ b/style_lng.css
@@ -1,12 +1,12 @@
 body.ru {
     margin-top: 50px;
     text-align: left;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Hack';
     font-size: 15px;
 }
 
 .container {
-    max-width: 700px;
+    max-width: 1000px;
     margin-left: auto;
     margin-right: auto;
     margin: auto;
@@ -14,7 +14,7 @@ body.ru {
 
 span {
     font-size: 25px;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Hack';
 }
 
 span.highlight {
@@ -36,13 +36,13 @@ span.highlight {
 #t01 tbody {
     line-height: 13px;
     text-decoration: none;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Hack';
     font-size: 15px;
 }
 
 #t02 tbody {
     line-height: 30px;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Hack';
     font-size: 15px;
 }
 
